--- a/.github/workflows/flutter_actions_android.yml
+++ b/.github/workflows/flutter_actions_android.yml
@@ -1,3 +1,7 @@
+name: Flutter Android
+run-name: ${{ github.actor }} is testing out FLutter Action 🚀
+on: [push]
+
 steps:
 - uses: actions/checkout@v3
 - uses: actions/setup-java@v2
