--- a/.github/workflows/flutter_actions_android.yml
+++ b/.github/workflows/flutter_actions_android.yml
@@ -1,17 +1,17 @@
 name: Flutter Android
 run-name: ${{ github.actor }} is testing out FLutter Action 🚀
 on: [push]
-
-steps:
-- uses: actions/checkout@v3
-- uses: actions/setup-java@v2
-  with:
-    distribution: 'zulu'
-    java-version: '11'
-- uses: subosito/flutter-action@v2
-  with:
-    flutter-version: '3.7.7'
-- run: flutter pub get
-- run: flutter test
-- run: flutter build apk
-- run: flutter build appbundle
+jobs:
+  build:
+    uses: actions/checkout@v3
+    uses: actions/setup-java@v2
+      with:
+        distribution: 'zulu'
+        java-version: '11'
+    uses: subosito/flutter-action@v2
+      with:
+        flutter-version: '3.7.7'
+    - run: flutter pub get
+    - run: flutter test
+    - run: flutter build apk
+    - run: flutter build appbundle
