--- a/.github/workflows/flutter_actions_android.yml
+++ b/.github/workflows/flutter_actions_android.yml
@@ -1,42 +1,26 @@
-name: Android Release
+name: Flutter Android
 
-# 1
 on:
-  # 2
   push:
     branches: [ "master" ]
   pull_request:
     branches: [ "master" ]
 
-  # 3
-  workflow_dispatch:
-
-# 4
 jobs:
-  # 5
   build:
-    # 6
     runs-on: ubuntu-latest
-
-    # 7
-    steps:
-      # 8
+    steps:  
       - uses: actions/checkout@v3
-      # 9
       - uses: actions/setup-java@v3
         with:
           distribution: 'zulu'
-          java-version: "12.x"
-      # 10   
+          java-version: "12.x"    
       - uses: subosito/flutter-action@v2
         with:
           # 11
           flutter-version: "3.0.0"
           channel: 'stable'
-      # 12
       - name: Get dependencies
         run: flutter pub get
-
-      # Runs a set of commands using the runners shell
       - name: Start release build
         run: flutter build appbundle
