--- a/.github/workflows/flutter_actions_android.yml
+++ b/.github/workflows/flutter_actions_android.yml
@@ -2,9 +2,9 @@ name: Flutter Android
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "main" ]
   pull_request:
-    branches: [ "master" ]
+    branches: [ "main" ]
   workflow_dispatch
 
 jobs:
