--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -5,3 +5,5 @@ test_task:
   pub_cache:
     folder: ~/.pub-cache
   test_script: flutter test --machine > report.json
+    report_artifacts:
+      path: report.json
