--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -5,5 +5,6 @@ test_task:
   pub_cache:
     folder: ~/.pub-cache
   test_script: flutter test --machine > report.json
+  always:
     report_artifacts:
       path: report.json
